# StadiumSphere-AI

./: .editorconfig  .env.example  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.tmp-rbac-build/: app.module.js  app.module.js.map  main.js  main.js.map
apps/ai/: .env.example  Dockerfile  README.md  pyproject.toml
apps/ai/app/: __init__.py  main.py
apps/ai/app/agents/: README.md
apps/ai/app/api/: __init__.py  health.py
apps/ai/app/config/: __init__.py  settings.py
apps/ai/app/evaluation/: README.md
apps/ai/app/memory/: README.md
apps/ai/app/models/: __init__.py  health.py
apps/ai/app/prompts/: README.md
apps/ai/app/retrieval/: README.md
apps/ai/app/tools/: README.md
apps/ai/app/utils/: __init__.py  logging.py
apps/ai/app/workflows/: README.md
apps/ai/tests/: test_health.py
docs/: 12a_DatabaseArchitecture.md  12b_CollectionsDesign.md  12c_RepositoryPattern.md  12d_DataFlow.md  AI-Agents.md  API.md  Architecture.md  Backend.md  Database.md  DevOps.md  Frontend.md  SRS.md  Testing.md  UI-UX.md  contributing.md  development-guide.md  getting-started.md  repository-structure.md
prompts/: Phase11_MasterPrompt.md  Phase12_1_MasterPrompt.md  Phase12_2_MasterPrompt.md  Phase12_3_MasterPrompt.md  Phase12_4_MasterPrompt.md  Phase12_5_MasterPrompt.md  Phase12_6_MasterPrompt.md  Phase12_7_MasterPrompt.md  README.md
scripts/: bootstrap.sh  validate-foundation.mjs
(+879 files in other folders)
