[project]
name = "stadiumsphere-ai-service"
version = "0.1.0"
description = "Typed FastAPI foundation for StadiumSphere AI services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "langchain>=0.3.25,<1.0.0",
  "langgraph>=0.4.8,<1.0.0",
  "openai>=1.86.0,<2.0.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "structlog>=25.4.0,<26.0.0",
  "uvicorn[standard]>=0.34.3,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "mypy>=1.16.0,<3.0.0",
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.11.13,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = ["tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
